# appdog

./: .clang  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  session.vim
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: simple_daemon.cpp
include/: appdog.h  client.h  timer.h
src/: appdogd.cpp  appdogd.h  client.cpp  client_.cpp  client_.h
src/messages/: activate.h  clients.h  confirm.h  deactivate.h  kick.h  message.h  reload.h  stop.h
tests/: CMakeLists.txt  appdog-test.cpp  client-test.py  timer-test.cpp
timer/: CMakeLists.txt  timer.cpp  timer_.cpp  timer_.h
